# GASpy

./: .gitignore  .gitmodules  pyproject.toml  setup.py
gaspy/: atoms_operators.py  defaults.py  utils.py
