[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GASpy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
dependencies = [
    "numpy",
    "scipy",
    "ase",
    "pymatgen",
    "pandas",
    "fireworks",
    "tqdm",
    "pymongo",
    "spglib",
    "multiprocess",
]

[project.urls]
Homepage = "https://github.com/Rasic2/GASpy"

[tool.setuptools]
include-package-data = true
packages = { find = { exclude = [] } }

[tool.setuptools.package-data]
gaspy = []